Sun Oct 29 01:02:35 2000  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scangobj.in: Work properly with GSignal

2000-10-21  Damon Chaplin  <damon@helixcode.com>

	* Released 0.4

2000-10-14  Damon Chaplin  <damon@helixcode.com>

	* AUTHORS: 
	* MAINTAINERS: changed my email address.

	* Makefile.am (dist-hook): remove the CVS dirs from the dist.

	* doc/setting-up.txt: typo.

Fri Oct  6 17:51:50 2000    <otaylor@redhat.com>

	* gtkdoc-scan.in gtkdoc-mkdb.in: Allow multiple
	--source-dir options.

Thu Sep  7 11:41:12 2000  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mkdb.in: Ignore all . files when scanning directories.

	* gtkdoc-scan.in: Add support for GLIB_VAR, GDKVAR,
	etc when looking for variable declarations. 

	* gtkdoc-scan.in: Recognize GET_CLASS macros.

	* gtkdoc-scangobj.in: Support .lo intermediate files
	with libtool.

Wed Sep  6 17:57:33 2000  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scangobj.in: Add gtkdoc-scangobj scanner for
	GObject type system.

	* gtkdoc-scanobj.in: Allow setting $LD to allow separating
	compilation and linking and thus to allow using libtool.

	* gtkdoc-fixxref.in (ScanIndices): Allow HTMLDIR
	not to be present yet.

Tue Sep  5 23:37:53 2000  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-fixxref.in: Add a --extra-dir option to
	allow scanning of additional uninstalled HTML
	directories.

	* gtkdoc-scan.in (ScanHeaders): Honor subdirectories
	appearing in --ignore-headers.

	* gtkdoc-mkdb.in: Append -CAPS to all all-caps identifiers
	to prevent an infinite expansion of special cases. 

	* gtkdoc-fixxref.in: Add a --module-dir option to
	allow fixing references in an uninstalled tree.

	* gtkdoc-mkdb.in gtkdoc-mkhtml.in: Simple handling
	for macros with embedded commas in enumeration 
	declarations.

Mon Aug 28 18:18:53 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in (DSSSL_DIR): Remove check for AM_PATH_GTK
	since the dependency is only run-time not install-time,
	and to avoid dependency loops.
