@@ -1,3 +1,8 @@
+Sun Oct 29 02:54:51 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* gtkdoc-scangobj.in: Sort signal types arrays for
+	greater stability and less random tmpl file diffs.
+
 Sun Oct 29 01:02:35 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* gtkdoc-scangobj.in: Work properly with GSignal
